--- a/Frontend/Dash_app/requirements.txt
+++ b/Frontend/Dash_app/requirements.txt
@@ -1,30 +1,30 @@
-Brotli==1.0.7
-click==7.1.2
+Brotli==1.0.9
+click==8.0.3
 dash==1.12.0
-dash-bootstrap-components==0.10.0
-dash-core-components==1.10.0
-dash-html-components==1.0.3
+dash-bootstrap-components==1.0.3
+dash-core-components==2.0.0
+dash-html-components==2.0.0
 dash-renderer==1.4.1
-dash-table==4.7.0
+dash-table==5.0.0
 DateTime==4.3
-Flask==1.1.2
-Flask-Compress==1.5.0
+Flask==2.0.3
+Flask-Compress==1.11
 future==0.18.2
-gunicorn==20.0.
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-numpy==1.18.4
-pandas==1.0.3
+gunicorn==20.1.0
+itsdangerous==2.1.1
+Jinja2==3.0.3
+MarkupSafe==2.1.0
+numpy==1.22.2
+pandas==1.4.1
 patsy==0.5.1
-plotly==4.7.1
+plotly==5.6.0
 plotly-express==0.4.1
 pycountry-convert
-python-dateutil==2.8.1
-pytz==2020.1
+python-dateutil==2.8.2
+pytz==2021.3
 retrying==1.3.3
-scipy==1.4.1
-six==1.14.0
+scipy==1.8.0
+six==1.16.0
 statsmodels==0.11.1
-Werkzeug==1.0.1
+Werkzeug==2.0.3
 zope.interface==5.1.0
